# Time-Logger

./: .gitignore  CMakeLists.txt  README.md  outline.md  settings.ini  settings.yaml
lang/: de.yaml  en.yaml
src/: TLFrame.cpp  TLFrame.h  config.cpp  config.h  main.cpp
src/panels/: CalendarPanel.cpp  CalendarPanel.h  TasksPanel.cpp  TasksPanel.h
src/widgets/: DayLogListControl.cpp  DayLogListControl.h
